--- a/style.css
+++ b/style.css
@@ -72,23 +72,11 @@ footer {
     margin: 5px;
 }
 
-.settings-language {
+.radio-group {
     display: grid;
     grid-template-columns: 1fr;
 
     padding-top: 10px;
-}
-
-.settings-language-element {
-    padding-top: 5px;
-}
-
-.settings-language-element-button {
-    
-}
-
-.settings-language-element-text {
-    
 }
 
 ul {
