--- a/style.css
+++ b/style.css
@@ -23,14 +23,33 @@ body {
     margin: 2px;
 }
 
+.header__language__settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
 .content {
     display: flex;
-    min-height: 95vh;
 
     margin: 5px;
 }
 
 .content__menu {
+    background-color: #ffffff;
+
+    margin-right: 10px;
+    width: 20%;
+}
+
+.content__menu__separator {
+    background-color: #f0f0f0;
+
+    min-height: 10px;
+}
+
+.content__menu__choose {
     background-color: #ffffff;
 
     display: flex;
@@ -41,7 +60,21 @@ body {
     padding: 5px;
 
     margin-right: 10px;
-    width: 20%;
+    width: 90%;
+}
+
+.content__menu__settings {
+    background-color: #ffffff;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    padding: 5px;
+
+    margin-right: 10px;
+    width: 90%;
 }
 
 .content__main {
