--- a/style.css
+++ b/style.css
@@ -120,6 +120,13 @@ body {
     color: grey;
 }
 
+.content__main__guides__image {
+    width: 96%;
+
+    padding-left: 2%;
+}
+
+
 .footer {
     background-color: #ffffff;
 
@@ -142,4 +149,14 @@ button {
     font-family: Courier, monospace;
 
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+img {
+    border-radius: 3px;
+
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+}
+
+@media (max-width: 768px) {
+    
 }
