--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f0f0f0;
-    font-family: Courier, monospace;
+    font-family: 'DejaVu Sans Mono', 'Courier New', Courier, monospace;
 }
 
 .header {
