--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f0f0f0;
-    font-family: Courier, monospace;
+    font-family: 'Courier New', monospace;
 }
 
 .header {
@@ -168,7 +168,5 @@ img {
 }
 
 @media (max-width: 768px) {
-    body {
-        font-family: 'DejaVu Sans Mono', 'Courier New';
-    }
+    
 }
