--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ body {
     margin: 2px;
 }
 
+.header__theme__settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
 .header__language__settings {
     display: flex;
     flex-direction: column;
